Saved Jupyter notebook 'notebook editor for compute_sentences'

--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -126,7 +126,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import dataiku\nimport pandas as pd\n\n# Define the output dataset\nsentences \u003d dataiku.Dataset(\"sentences\")\n\n# Write in chunks to avoid memory overload\nwith sentences.get_writer() as writer:\n    chunk_size \u003d 10000  # Adjust based on your memory capacity\n    for chunk in np.array_split(valid_sentences_df, max(1, len(refined_df) // chunk_size)):\n        writer.write_dataframe(chunk)"
+        "import dataiku\nimport pandas as pd\n\n# Define the output dataset\nsentences \u003d dataiku.Dataset(\"sentences\")\n\n# Write in chunks to avoid memory overload\nwith sentences.get_writer() as writer:\n    chunk_size \u003d 10000  # Adjust based on your memory capacity\n    for chunk in np.array_split(valid_sentences_df, max(1, len(valid_sentences_df) // chunk_size)):\n        writer.write_dataframe(chunk)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "import dataiku\nimport pandas as pd\nimport numpy as np\n\n# Load your dataset\nvalid_sentences_df \u003d pd.read_csv(\u0027path_to_your_data.csv\u0027)\n\n# Ensure the schema matches\nvalid_sentences_df \u003d valid_sentences_df[[\u0027column1\u0027, \u0027column2\u0027]]  # Adjust columns as needed\n\n# Write in chunks to avoid memory overload\nsentences \u003d dataiku.Dataset(\"sentences\")\nwith sentences.get_writer() as writer:\n    chunk_size \u003d 10000  # Adjust based on your memory capacity\n    for chunk in np.array_split(valid_sentences_df, max(1, len(valid_sentences_df) // chunk_size)):\n        writer.write_dataframe(chunk)\n"
       ],
       "outputs": []
     }
