Saved Jupyter notebook 'notebook editor for compute_sentences'

--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -80,11 +80,27 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Prepare texts for sentence extraction"
+      ]
+    },
+    {
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
       "source": [
         "texts"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "for text in texts:\n    text \u003d text.replace(\"\\n\\n\", \"\\n\")"
       ],
       "outputs": []
     },
