Saved Jupyter notebook 'notebook editor for compute_sentences'

--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -100,7 +100,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "for text in texts:\n    text \u003d text.replace(\"\\n\\n\", \"\\n\")"
+        "clean_texts \u003d te"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "for text in texts:\n    text \u003d text.replace(\"\\n\\n\", \"\\\\pp\")\n    text \u003d text.replace(\"\\n\", \" \")\n    #text \u003d text.replace(\"\\\\pp\", \"\\n\\n\")"
       ],
       "outputs": []
     },
