Saved Jupyter notebook 'notebook editor for compute_sentences'

--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -118,6 +118,15 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
+        "updated_texts \u003d [text.replace(\"text\", \"string\") for text in texts]"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         "for text in clean_texts:\n    text \u003d text.replace(\"\\n\\n\", \"\\\\pp\")\n    text \u003d text.replace(\"\\n\", \" \")\n    #text \u003d text.replace(\"\\\\pp\", \"\\n\\n\")"
       ],
       "outputs": []
