--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -52,7 +52,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd\nimport numpy as np\nfrom dataiku import pandasutils as pdu\nimport nltk\nnltk.download(\u0027punkt\u0027)\nnltk.download(\u0027punkt_tab\u0027)\nfrom nltk.tokenize import sent_tokenize\nimport spacy\nimport os\n"
+        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd\nimport numpy as np\nfrom dataiku import pandasutils as pdu\nimport nltk\nnltk.download(\u0027punkt\u0027)\nnltk.download(\u0027punkt_tab\u0027)\nfrom nltk.tokenize import sent_tokenize\nimport spacy\n# Load the spaCy model\nnlp \u003d spacy.load(\u0027en_core_web_sm\u0027)\nimport os\n"
       ],
       "outputs": []
     },
@@ -91,25 +91,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "texts"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
         "clean_texts \u003d texts"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "clean_texts"
       ],
       "outputs": []
     },
@@ -123,11 +105,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Extract sentences from the texts with nltk"
+      ]
+    },
+    {
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Extract sentences from the texts\nsentences \u003d []\nfor text in texts:\n    text \u003d text.strip()\n    sentences.extend(sent_tokenize(text))\n\n# Create a DataFrame from the sentences\nsentences_df \u003d pd.DataFrame({\u0027sentence\u0027: sentences})\n\n# Splitting sentences by newline character\nsentences_df[\u0027sentence\u0027] \u003d sentences_df[\u0027sentence\u0027].apply(lambda x: x.split(\u0027\\n\u0027))\n# Stripping whitespace from each sentence\nexploded_df \u003d sentences_df.explode(\u0027sentence\u0027)\nexploded_df \u003d exploded_df.drop_duplicates()\nexploded_df[\u0027sentence\u0027] \u003d exploded_df[\u0027sentence\u0027].apply(lambda x: x.strip() if isinstance(x, str) else x)\nexploded_df[\u0027sentence\u0027].replace(\u0027\u0027, np.nan, inplace\u003dTrue)\nexploded_df \u003d exploded_df.dropna().reset_index(drop\u003dTrue)\nclean_sentences_according_to_nltk_df \u003d exploded_df"
+        "sentences \u003d []\nfor text in clean_texts:\n    text \u003d text.strip()\n    sentences.extend(sent_tokenize(text))\n\n# Create a DataFrame from the sentences\nsentences_df \u003d pd.DataFrame({\u0027sentence\u0027: sentences})\n\n# Splitting sentences by newline character\nsentences_df[\u0027sentence\u0027] \u003d sentences_df[\u0027sentence\u0027].apply(lambda x: x.split(\u0027\\n\u0027))\n# Stripping whitespace from each sentence\nexploded_df \u003d sentences_df.explode(\u0027sentence\u0027)\nexploded_df \u003d exploded_df.drop_duplicates()\nexploded_df[\u0027sentence\u0027] \u003d exploded_df[\u0027sentence\u0027].apply(lambda x: x.strip() if isinstance(x, str) else x)\nexploded_df[\u0027sentence\u0027].replace(\u0027\u0027, np.nan, inplace\u003dTrue)\nexploded_df \u003d exploded_df.dropna().reset_index(drop\u003dTrue)\nclean_sentences_according_to_nltk_df \u003d exploded_df"
       ],
       "outputs": []
     },
@@ -139,6 +128,13 @@
         "clean_sentences_according_to_nltk_df"
       ],
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Extract sentences from the texts with spacy"
+      ]
     },
     {
       "execution_count": 0,
