Saved Jupyter notebook 'notebook editor for compute_named_entity_recognition_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_named_entity_recognition_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_named_entity_recognition_with_nltk.ipynb
@@ -35,9 +35,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu\nimport nltk\nfrom nltk import word_tokenize, pos_tag, ne_chunk\nfrom nltk.tree import Tree\n\n# Ensure you have the necessary NLTK data files\nnltk.download(\u0027punkt\u0027)\nnltk.download(\u0027punkt_tab\u0027)\nnltk.download(\u0027maxent_ne_chunker\u0027)\nnltk.download(\u0027maxent_ne_chunker_tab\u0027)\n\nnltk.download(\u0027words\u0027)\nnltk.download(\u0027averaged_perceptron_tagger\u0027)\nnltk.download(\u0027averaged_perceptron_tagger_eng\u0027)\n  \u003e\u003e\u003e nltk.download(\u0027maxent_ne_chunker_tab\u0027)\n"
+        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu\nimport nltk\nfrom nltk import word_tokenize, pos_tag, ne_chunk\nfrom nltk.tree import Tree\n\n# Ensure you have the necessary NLTK data files\nnltk.download(\u0027punkt\u0027)\nnltk.download(\u0027punkt_tab\u0027)\nnltk.download(\u0027maxent_ne_chunker\u0027)\nnltk.download(\u0027maxent_ne_chunker_tab\u0027)\n\nnltk.download(\u0027words\u0027)\nnltk.download(\u0027averaged_perceptron_tagger\u0027)\nnltk.download(\u0027averaged_perceptron_tagger_eng\u0027)\n"
       ],
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Get texts"
+      ]
     },
     {
       "execution_count": 0,
@@ -49,6 +56,13 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Entity recognition"
+      ]
+    },
+    {
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
@@ -58,29 +72,34 @@
       "outputs": []
     },
     {
-      "execution_count": 0,
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {},
       "source": [
-        ""
-      ],
-      "outputs": []
+        "# Convert the DataFrame to the required format"
+      ]
     },
     {
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "\n\n# Convert the DataFrame to the required format\nnamed_entity_recognition_df \u003d df.explode(\u0027entities\u0027).dropna().reset_index(drop\u003dTrue)\nnamed_entity_recognition_df[[\u0027entity\u0027, \u0027label\u0027]] \u003d pd.DataFrame(named_entity_recognition_df[\u0027entities\u0027].tolist(), index\u003dnamed_entity_recognition_df.index)\nnamed_entity_recognition_df \u003d named_entity_recognition_df.drop(columns\u003d[\u0027entities\u0027])\n\n"
+        "named_entity_recognition_df \u003d df.explode(\u0027entities\u0027).dropna().reset_index(drop\u003dTrue)\nnamed_entity_recognition_df[[\u0027entity\u0027, \u0027label\u0027]] \u003d pd.DataFrame(named_entity_recognition_df[\u0027entities\u0027].tolist(), index\u003dnamed_entity_recognition_df.index)\nnamed_entity_recognition_df \u003d named_entity_recognition_df.drop(columns\u003d[\u0027entities\u0027])"
       ],
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Write recipe outputs"
+      ]
     },
     {
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Write recipe outputs\nnamed_entity_recognition \u003d dataiku.Dataset(\"named_entity_recognition_with_nltk\")\nnamed_entity_recognition.write_with_schema(named_entity_recognition_df)"
+        "named_entity_recognition \u003d dataiku.Dataset(\"named_entity_recognition_with_nltk\")\nnamed_entity_recognition.write_with_schema(named_entity_recognition_df)"
       ],
       "outputs": []
     }
