Saved Jupyter notebook 'notebook editor for compute_corpus_for_knowledge_engineering'

--- a/ipython_notebooks/notebook editor for compute_corpus_for_knowledge_engineering.ipynb
+++ b/ipython_notebooks/notebook editor for compute_corpus_for_knowledge_engineering.ipynb
@@ -62,7 +62,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Compute recipe outputs\n# TODO: Write here your actual code that computes the outputs\n# NB: DSS supports several kinds of APIs for reading and writing data. Please see doc.\nclean_texts \u003d [text.replace(\"\\n\\n\", \"\\\\pp\") for text in clean_texts]\nclean_texts \u003d [text.replace(\"\\n\", \" \") for text in clean_texts]\nclean_texts \u003d [text.replace(\"\\\\pp\", \"\\n\\n\") for text in clean_texts]\nclean_texts \u003d [text.replace(\"\\x0c\", \"\\n\") for text in clean_texts]\n\n\n\n"
+        "# Compute recipe outputs\n# TODO: Write here your actual code that computes the outputs\n# NB: DSS supports several kinds of APIs for reading and writing data. Please see doc.\nclean_texts \u003d [text.replace(\"\\n\\n\", \"\\\\pp\") for text in clean_texts]\nclean_texts \u003d [text.replace(\"\\n\", \" \") for text in clean_texts]\nclean_texts \u003d [text.replace(\"\\\\pp\", \"\\n\\n\") for text in clean_texts]\nclean_texts \u003d [text.replace(\"\\x0c\", \"\\n\") for text in clean_texts]"
       ],
       "outputs": []
     },
@@ -71,7 +71,25 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "corpus_for_knowledge_engineering_df \u003d ... # Compute a Pandas dataframe to write into corpus_for_knowledge_engineering\n"
+        "corpus_for_knowledge_engineering_df \u003d pd.DataFrame({\"text\": clean_texts})"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "corpus_for_knowledge_engineering_df"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        " ... # Compute a Pandas dataframe to write into corpus_for_knowledge_engineering\n"
       ],
       "outputs": []
     },
