Saved Jupyter notebook 'notebook editor for compute_corpus_for_knowledge_engineering'

--- a/ipython_notebooks/notebook editor for compute_corpus_for_knowledge_engineering.ipynb
+++ b/ipython_notebooks/notebook editor for compute_corpus_for_knowledge_engineering.ipynb
@@ -31,6 +31,13 @@
   "nbformat_minor": 1,
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Import libraries"
+      ]
+    },
+    {
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
@@ -40,6 +47,13 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Get texts"
+      ]
+    },
+    {
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
@@ -47,6 +61,13 @@
         "A220_tech_docs_text \u003d dataiku.Folder(\"rhnW9xGx\")\nA220_tech_docs_text_info \u003d A220_tech_docs_text.get_info()\n# Assuming the folder contains text files, we can read them into a DataFrame\n\nfile_paths \u003d A220_tech_docs_text.list_paths_in_partition()\ntexts \u003d []\n\nfor file_path in file_paths:\n    with A220_tech_docs_text.get_download_stream(file_path) as f:\n        texts.append(f.read().decode(\u0027utf-8\u0027))"
       ],
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Clean texts"
+      ]
     },
     {
       "execution_count": 0,
@@ -67,6 +88,13 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Save dataframe"
+      ]
+    },
+    {
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
@@ -85,20 +113,18 @@
       "outputs": []
     },
     {
-      "execution_count": 0,
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {},
       "source": [
-        " ... # Compute a Pandas dataframe to write into corpus_for_knowledge_engineering\n"
-      ],
-      "outputs": []
+        "# Write recipe outputs"
+      ]
     },
     {
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Write recipe outputs\ncorpus_for_knowledge_engineering \u003d dataiku.Dataset(\"corpus_for_knowledge_engineering\")\ncorpus_for_knowledge_engineering.write_with_schema(corpus_for_knowledge_engineering_df)"
+        "corpus_for_knowledge_engineering \u003d dataiku.Dataset(\"corpus_for_knowledge_engineering\")\ncorpus_for_knowledge_engineering.write_with_schema(corpus_for_knowledge_engineering_df)"
       ],
       "outputs": []
     }
