--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -1,59 +1,79 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
+      "name": "py-dku-containerized-venv-markitdown-scw-fa",
       "display_name": "Python in SCW-FA (env markitdown)",
-      "language": "python",
-      "name": "py-dku-containerized-venv-markitdown-scw-fa"
+      "language": "python"
     },
-    "associatedRecipe": "compute_nouns_extracted_with_nltk",
-    "creator": "ludovic.bocken@cgi.com",
+    "hide_input": false,
+    "language_info": {
+      "name": "python",
+      "version": "3.11.10",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
+    },
     "createdOn": 1738688431757,
+    "creator": "ludovic.bocken@cgi.com",
+    "associatedRecipe": "compute_nouns_extracted_with_nltk",
     "tags": [
       "recipe-editor"
     ],
-    "customFields": {}
+    "customFields": {},
+    "modifiedBy": "ludovic.bocken@cgi.com"
   },
+  "nbformat": 4,
+  "nbformat_minor": 1,
   "cells": [
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
-        "# -*- coding: utf-8 -*-\n",
-        "import dataiku\n",
-        "import pandas as pd, numpy as np\n",
-        "from dataiku import pandasutils as pdu\n",
-        "import nltk\n",
-        "from nltk import word_tokenize, pos_tag\n",
-        "\n",
-        "# Ensure you have the necessary NLTK resources\n",
-        "nltk.download(\u0027punkt\u0027)\n",
-        "nltk.download(\u0027averaged_perceptron_tagger\u0027)\n",
-        "\n",
-        "# Read recipe inputs\n",
-        "corpus_for_knowledge_engineering \u003d dataiku.Dataset(\"corpus_for_knowledge_engineering\")\n",
-        "corpus_for_knowledge_engineering_df \u003d corpus_for_knowledge_engineering.get_dataframe()\n",
-        "\n",
-        "# Function to extract nouns from text\n",
-        "def extract_nouns(text):\n",
-        "    words \u003d word_tokenize(text)\n",
-        "    words_pos \u003d pos_tag(words)\n",
-        "    nouns \u003d [word for word, pos in words_pos if pos.startswith(\u0027NN\u0027)]\n",
-        "    return \u0027 \u0027.join(nouns)\n",
-        "\n",
-        "# Apply the function to the dataframe\n",
-        "corpus_for_knowledge_engineering_df[\u0027nouns\u0027] \u003d corpus_for_knowledge_engineering_df[\u0027text_column\u0027].apply(extract_nouns)\n",
-        "\n",
-        "# Compute recipe outputs from inputs\n",
-        "nouns_extracted_with_nltk_df \u003d corpus_for_knowledge_engineering_df[[\u0027nouns\u0027]]\n",
-        "\n",
-        "# Write recipe outputs\n",
-        "nouns_extracted_with_nltk \u003d dataiku.Dataset(\"nouns_extracted_with_nltk\")\n",
-        "nouns_extracted_with_nltk.write_with_schema(nouns_extracted_with_nltk_df)"
-      ]
+        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu\nimport nltk\nfrom nltk import word_tokenize, pos_tag"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Ensure you have the necessary NLTK resources\nnltk.download(\u0027punkt\u0027)\nnltk.download(\u0027averaged_perceptron_tagger\u0027)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Read recipe inputs\ncorpus_for_knowledge_engineering \u003d dataiku.Dataset(\"corpus_for_knowledge_engineering\")\ncorpus_for_knowledge_engineering_df \u003d corpus_for_knowledge_engineering.get_dataframe()"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Function to extract nouns from text\ndef extract_nouns(text):\n    words \u003d word_tokenize(text)\n    words_pos \u003d pos_tag(words)\n    nouns \u003d [word for word, pos in words_pos if pos.startswith(\u0027NN\u0027)]\n    return \u0027 \u0027.join(nouns)\n\n# Apply the function to the dataframe\ncorpus_for_knowledge_engineering_df[\u0027nouns\u0027] \u003d corpus_for_knowledge_engineering_df[\u0027text_column\u0027].apply(extract_nouns)\n\n# Compute recipe outputs from inputs\nnouns_extracted_with_nltk_df \u003d corpus_for_knowledge_engineering_df[[\u0027nouns\u0027]]\n\n"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Write recipe outputs\nnouns_extracted_with_nltk \u003d dataiku.Dataset(\"nouns_extracted_with_nltk\")\nnouns_extracted_with_nltk.write_with_schema(nouns_extracted_with_nltk_df)"
+      ],
+      "outputs": []
     }
   ]
 }
