--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -18,14 +18,14 @@
       "nbconvert_exporter": "python",
       "file_extension": ".py"
     },
+    "modifiedBy": "ludovic.bocken@cgi.com",
     "createdOn": 1738688431757,
     "creator": "ludovic.bocken@cgi.com",
     "associatedRecipe": "compute_nouns_extracted_with_nltk",
     "tags": [
       "recipe-editor"
     ],
-    "customFields": {},
-    "modifiedBy": "ludovic.bocken@cgi.com"
+    "customFields": {}
   },
   "nbformat": 4,
   "nbformat_minor": 1,
@@ -62,7 +62,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Function to extract nouns from text\ndef extract_nouns(text):\n    words \u003d word_tokenize(text)\n    words_pos \u003d pos_tag(words)\n    nouns \u003d [word for word, pos in words_pos if pos.startswith(\u0027NN\u0027)]\n    return \u0027 \u0027.join(nouns)\n\n# Apply the function to the dataframe\ncorpus_for_knowledge_engineering_df[\u0027nouns\u0027] \u003d corpus_for_knowledge_engineering_df[\u0027text_column\u0027].apply(extract_nouns)\n\n# Compute recipe outputs from inputs\nnouns_extracted_with_nltk_df \u003d corpus_for_knowledge_engineering_df[[\u0027nouns\u0027]]\n\n"
+        "# Function to extract nouns from text\ndef extract_nouns(text):\n    words \u003d word_tokenize(text)\n    words_pos \u003d pos_tag(words)\n    nouns \u003d [word for word, pos in words_pos if pos.startswith(\u0027NN\u0027)]\n    return \u0027 \u0027.join(nouns)\n\n# Apply the function to the dataframe\ncorpus_for_knowledge_engineering_df[\u0027nouns\u0027] \u003d corpus_for_knowledge_engineering_df[\u0027text_column\u0027].apply(extract_nouns)\n\n# Compute recipe outputs from inputs\nnouns_extracted_with_nltk_df \u003d corpus_for_knowledge_engineering_df[[\u0027nouns\u0027]]"
       ],
       "outputs": []
     },
