Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -44,7 +44,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Ensure you have the necessary NLTK resources\nnltk.download(\u0027punkt\u0027)\nnltk.download(\u0027averaged_perceptron_tagger\u0027)"
+        "# Ensure you have the necessary NLTK resources\nnltk.download(\u0027punkt\u0027)\nnltk.download(\u0027punkt_tab\u0027)\n\nnltk.download(\u0027averaged_perceptron_tagger\u0027)"
       ],
       "outputs": []
     },
@@ -62,7 +62,34 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Function to extract nouns from text\ndef extract_nouns(text):\n    words \u003d word_tokenize(text)\n    words_pos \u003d pos_tag(words)\n    nouns \u003d [word for word, pos in words_pos if pos.startswith(\u0027NN\u0027)]\n    return \u0027 \u0027.join(nouns)\n\n# Apply the function to the dataframe\ncorpus_for_knowledge_engineering_df[\u0027nouns\u0027] \u003d corpus_for_knowledge_engineering_df[\u0027text_column\u0027].apply(extract_nouns)\n\n# Compute recipe outputs from inputs\nnouns_extracted_with_nltk_df \u003d corpus_for_knowledge_engineering_df[[\u0027nouns\u0027]]"
+        "corpus_for_knowledge_engineering_df"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Function to extract nouns from text\ndef extract_nouns(text):\n    words \u003d word_tokenize(text)\n    words_pos \u003d pos_tag(words)\n    nouns \u003d [word for word, pos in words_pos if pos.startswith(\u0027NN\u0027)]\n    return \u0027 \u0027.join(nouns)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Apply the function to the dataframe\ncorpus_for_knowledge_engineering_df[\u0027nouns\u0027] \u003d corpus_for_knowledge_engineering_df[\u0027text\u0027].apply(extract_nouns)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Compute recipe outputs from inputs\nnouns_extracted_with_nltk_df \u003d corpus_for_knowledge_engineering_df[[\u0027nouns\u0027]]"
       ],
       "outputs": []
     },
