Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -44,7 +44,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Ensure you have the necessary NLTK resources\nnltk.download(\u0027punkt\u0027)\nnltk.download(\u0027punkt_tab\u0027)\n\nnltk.download(\u0027averaged_perceptron_tagger\u0027)"
+        "# Ensure you have the necessary NLTK resources\nnltk.download(\u0027punkt\u0027)\nnltk.download(\u0027punkt_tab\u0027)\n\nnltk.download(\u0027averaged_perceptron_tagger\u0027)\nnltk.download(\u0027averaged_perceptron_tagger_eng\u0027)\n"
       ],
       "outputs": []
     },
