Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -71,7 +71,25 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
+        "text \u003d corpus_for_knowledge_engineering_df[\"text\"][0]"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         "# Function to extract nouns from text\ndef extract_nouns(text):\n    words \u003d word_tokenize(text)\n    words_pos \u003d pos_tag(words)\n    nouns \u003d [word for word, pos in words_pos if pos.startswith(\u0027NN\u0027)]\n    return \u0027 \u0027.join(nouns)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "extract_nouns(text)"
       ],
       "outputs": []
     },
@@ -90,6 +108,15 @@
       "metadata": {},
       "source": [
         "# Compute recipe outputs from inputs\nnouns_extracted_with_nltk_df \u003d corpus_for_knowledge_engineering_df[[\u0027nouns\u0027]]"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "nouns_extracted_with_nltk_df"
       ],
       "outputs": []
     },
