Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -80,7 +80,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Function to extract nouns from text\ndef extract_nouns(text):\n    words \u003d word_tokenize(text)\n    words_pos \u003d pos_tag(words)\n    nouns \u003d [word for word, pos in words_pos if pos.startswith(\u0027NN\u0027)]\n    return \u0027 \u0027.join(nouns)"
+        "# Function to extract nouns from text\ndef extract_nouns(text):\n    words \u003d word_tokenize(text)\n    words_pos \u003d pos_tag(words)\n    #nouns \u003d [word for word, pos in words_pos if pos.startswith(\u0027NN\u0027)]\n    # \u0027 \u0027.join(nouns)\n    return words_pos"
       ],
       "outputs": []
     },
