--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -80,6 +80,24 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
+        "lower_text \u003d text.lower()"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "lower_text"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         "# Function to extract nouns from text\ndef extract_nouns(text):\n    words \u003d word_tokenize(text)\n    words_pos \u003d pos_tag(words)\n    #nouns \u003d [word for word, pos in words_pos if pos.startswith(\u0027NN\u0027)]\n    # \u0027 \u0027.join(nouns)\n    return words_pos"
       ],
       "outputs": []
@@ -89,7 +107,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "extract_nouns(text)"
+        "extract_nouns(lower_text)"
       ],
       "outputs": []
     },
