Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -107,7 +107,25 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "extract_nouns(lower_text)"
+        "data \u003d extract_nouns(lower_text)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "data"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Create a DataFrame\ndf \u003d pd.DataFrame(data, columns\u003d[\u0027word\u0027, \u0027tag\u0027])\ntags \u003d [\"NN\", \"NNS\"]\ndf \u003d df[df[\"tag\"].isin(tags)]\n# Display the DataFrame\nprint(df)"
       ],
       "outputs": []
     },
