Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -31,6 +31,13 @@
   "nbformat_minor": 1,
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Import libraries"
+      ]
+    },
+    {
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
@@ -44,16 +51,23 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Ensure you have the necessary NLTK resources\nnltk.download(\u0027punkt\u0027)\nnltk.download(\u0027punkt_tab\u0027)\n\nnltk.download(\u0027averaged_perceptron_tagger\u0027)\nnltk.download(\u0027averaged_perceptron_tagger_eng\u0027)\n"
+        "nltk.download(\u0027punkt\u0027)\nnltk.download(\u0027punkt_tab\u0027)\n\nnltk.download(\u0027averaged_perceptron_tagger\u0027)\nnltk.download(\u0027averaged_perceptron_tagger_eng\u0027)"
       ],
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Read recipe inputs"
+      ]
     },
     {
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Read recipe inputs\ncorpus_for_knowledge_engineering \u003d dataiku.Dataset(\"corpus_for_knowledge_engineering\")\ncorpus_for_knowledge_engineering_df \u003d corpus_for_knowledge_engineering.get_dataframe()"
+        "corpus_for_knowledge_engineering \u003d dataiku.Dataset(\"corpus_for_knowledge_engineering\")\ncorpus_for_knowledge_engineering_df \u003d corpus_for_knowledge_engineering.get_dataframe()"
       ],
       "outputs": []
     },
@@ -107,7 +121,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "data \u003d extract_nouns(lower_text)"
+        "data_lower \u003d extract_nouns(lower_text)"
       ],
       "outputs": []
     },
@@ -125,16 +139,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "data"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "# Create a DataFrame\ndf \u003d pd.DataFrame(data, columns\u003d[\u0027word\u0027, \u0027tag\u0027])\ntags \u003d [\"NN\", \"NNS\", \"NNP\"]\ndf \u003d df[df[\"tag\"].isin(tags)]\n# Display the DataFrame\nprint(df)"
+        "# Create a DataFrame\ndf \u003d pd.DataFrame(data, columns\u003d[\u0027word\u0027, \u0027tag\u0027])\ntags \u003d [\"NN\", \"NNS\", \"NNP\"]\ndf \u003d df[df[\"tag\"].isin(tags)]"
       ],
       "outputs": []
     },
