--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -85,34 +85,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "text \u003d corpus_for_knowledge_engineering_df[\"text\"][0]"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "lower_text \u003d text.lower()"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "lower_text"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "# Function to extract nouns from text\ndef extract_nouns(text):\n    words \u003d word_tokenize(text)\n    words_pos \u003d pos_tag(words)\n    #nouns \u003d [word for word, pos in words_pos if pos.startswith(\u0027NN\u0027)]\n    # \u0027 \u0027.join(nouns)\n    return words_pos"
+        "# Function to extract nouns from text\ndef extract_nouns(text):\n    words \u003d word_tokenize(text)\n    words_pos \u003d pos_tag(words)\n    df \u003d pd.DataFrame(words_pos, columns\u003d[\u0027word\u0027, \u0027tag\u0027])\n    tags \u003d [\"NN\", \"NNS\", \"NNP\"]\n    df \u003d df[df[\"tag\"].isin(tags)]\n    #nouns \u003d [word for word, pos in words_pos if pos.startswith(\u0027NN\u0027)]\n    # \u0027 \u0027.join(nouns)\n    return df"
       ],
       "outputs": []
     },
@@ -139,7 +112,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Create a DataFrame\ndf \u003d pd.DataFrame(data, columns\u003d[\u0027word\u0027, \u0027tag\u0027])\ntags \u003d [\"NN\", \"NNS\", \"NNP\"]\ndf \u003d df[df[\"tag\"].isin(tags)]"
+        "# Create a DataFrame\n"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "corpus_for_knowledge_engineering_df[\u0027text\u0027].apply(extract_nouns)"
       ],
       "outputs": []
     },
