Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -94,7 +94,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "data_lower \u003d extract_nouns(lower_text)"
+        "pos_df \u003d corpus_for_knowledge_engineering_df[\u0027text\u0027].apply(extract_nouns)"
       ],
       "outputs": []
     },
@@ -103,25 +103,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "data \u003d extract_nouns(text)"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "# Create a DataFrame\n"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "corpus_for_knowledge_engineering_df[\u0027text\u0027].apply(extract_nouns)"
+        "lower_pos_df \u003d corpus_for_knowledge_engineering_df[\u0027lower_text\u0027].apply(extract_nouns)"
       ],
       "outputs": []
     },
