Saved Jupyter notebook 'notebook editor for compute_nouns_extracted_with_nltk'

--- a/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
+++ b/ipython_notebooks/notebook editor for compute_nouns_extracted_with_nltk.ipynb
@@ -103,6 +103,15 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
+        "pos_df"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         "lower_pos_df \u003d corpus_for_knowledge_engineering_df[\u0027lower_text\u0027].apply(extract_nouns)"
       ],
       "outputs": []
